K8S/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  namespace: development
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: customer-service
---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  namespace: production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: customer-service
